@@ -29,8 +29,8 @@ import net.i2p.util.Log;
  *
  */
 public class OutNetMessage {
-    private Log _log;
-    private RouterContext _context;
+    private final Log _log;
+    private final RouterContext _context;
     private RouterInfo _target;
     private I2NPMessage _message;
     /** cached message class name, for use after we discard the message */
@@ -50,7 +50,7 @@ public class OutNetMessage {
     private long _sendBegin;
     private long _transmitBegin;
     private Exception _createdBy;
-    private long _created;
+    private final long _created;
     /** for debugging, contains a mapping of even name to Long (e.g. "begin sending", "handleOutbound", etc) */
     private HashMap<String, Long> _timestamps;
     /**
@@ -89,15 +89,18 @@ public class OutNetMessage {
             // only timestamp if we are debugging
             synchronized (this) {
                 locked_initTimestamps();
-                while (_timestamps.containsKey(eventName)) {
-                    eventName = eventName + '.';
-                }
-                _timestamps.put(eventName, new Long(now));
+                // ???
+                //while (_timestamps.containsKey(eventName)) {
+                //    eventName = eventName + '.';
+                //}
+                _timestamps.put(eventName, Long.valueOf(now));
                 _timestampOrder.add(eventName);
             }
         }
         return now - _created;
     }
+
+    /** @deprecated unused */
     public Map<String, Long> getTimestamps() {
         if (_log.shouldLog(Log.INFO)) {
             synchronized (this) {
@@ -107,6 +110,8 @@ public class OutNetMessage {
         }
         return Collections.EMPTY_MAP;
     }
+
+    /** @deprecated unused */
     public Long getTimestamp(String eventName) {
         if (_log.shouldLog(Log.INFO)) {
             synchronized (this) {
@@ -220,7 +225,7 @@ public class OutNetMessage {
     
     public void transportFailed(String transportStyle) { 
         if (_failedTransports == null)
-            _failedTransports = new HashSet(1);
+            _failedTransports = new HashSet(2);
         _failedTransports.add(transportStyle); 
     }
     /** not thread safe - dont fail transports and iterate over this at the same time */
@@ -368,7 +373,7 @@ public class OutNetMessage {
     @Override
     public boolean equals(Object obj) {
         if(obj == null) return false;
-        if(obj.getClass() != OutNetMessage.class) return false;
+        if(!(obj instanceof OutNetMessage)) return false;
         return obj == this; // two OutNetMessages are different even if they contain the same message
     }
 }
